src/css/01.vmd.css
#vmd {
    position:fixed;
    width:100%;
    top:0;
    left:0;
    opacity:0.95;
    z-index:1000;
}

#vmd .vmd-toolbar {
    width:100%;
    background: linear-gradient(to bottom, rgba(226,226,226,1) 0%, rgba(254,254,254,1) 100%);
    box-shadow:0 4px 8px rgba(0,0,0,0.4);
    padding:2px 0 1px 1px;
    height:30px;
}

#vmd-snaptarget {
    background-color:#fff;
    position:fixed;
    bottom:0;
    width:100%;
    height:0px;
    left:0;
    z-index:2000;
}

#vmd-logo {
    background:none;
}

div.ui-widget-handle {
    background-color:#000;
}

.ui.vmd-element.active.button:before {
    border-right: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    background-color:#ccc;
    content: '';
    display: block;
    height: 8px;
    width: 8px;
    position: absolute;
    top:25px;
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.ui.vertical.menu {
    box-shadow:0 4px 8px rgba(0,0,0,0.4);
}

.vmd-outline:hover {
    outline:1px solid #00f;
}

.vmd-identifier {
    font-family:Courier New;
    font-size:12px !important;
    font-weight:bold;
}

.gray {
    color:#999 !important;
}

.lightgray {
    color:#ddd !important;
}

.vmd-form {
    position:relative !important;
    width:600px !important;
    top:-10px !important;
}

